--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 				</div>
 			</div>
 			<div class="stage-container remove">
+				<h1>宝宝我爱你 距离见面还有：</h1>
+  <div id="countdown"></div>
 				<div class="canvas-container">
 					<canvas id="trails-canvas">
 					</canvas>
